--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Welcome to My Telegram Mini App</h1>
     <div id="user-info"></div>
+    <button id="button">Передать инфо</button>
     <script>
         function initializeApp() {
             // Fetching the init data
@@ -23,12 +24,17 @@
             //Send User Information
             alert(`Получен ID: ${userId}, Имя: ${Ln} ${Fn}`);
             // Пример в Mini App (JavaScript)
+            const scoreElement = document.getElementById('button');
+            startQuizButton.addEventListener('click', () => {
+    
             const userData = {
             user_id: Telegram.WebApp.initDataUnsafe.user?.id,
             name: "Alice",
             age: 25,
             preferences: { theme: "dark", notifications: true }
+                
 };
+                });
 
             // Отправка данных в бота
             Telegram.WebApp.sendData(JSON.stringify(userData));
