--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
             // Формируем данные для отправки
             const data = {
-                user_id: Telegram.WebApp.initDataUnsafe.user?.id,
+                user_id: Telegram.WebApp.initDataUnsafe.user.id,
                 message: "Hello from Mini App!"
             };
             
