--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 user_id: Telegram.WebApp.initDataUnsafe.user.id,
                 message: "Hello from Mini App!"
             };
-            
+            console.log("initData:", Telegram.WebApp.initData);
             // Логируем данные перед отправкой
             console.log("Данные для отправки:", data);
             
