--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <form id="userForm" style="display: none;">
         <h1>Заполните профиль</h1>
-        <p>Потому что-потому!</p>
+        <p class="DiscriptionBox">Потому что-потому!</p>
         
         <input type="text" id="fio" placeholder="ФИО" required>
         <input type="text" id="company" placeholder="Компания" required>
