--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
 </head>
 <body>
+    <div class="bg"></div>
     <div id="quizContainer" style="display: none;">
         
         <div id="questionBox">
